# runik-api

./: DockerFile  Dockerfile  README.md  ROADMAP.md  TODO.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/routes/: auth.py
app/core/: config.py  database.py  logging.py  security.py
app/models/: user.py
app/schemas/: user.py
app/services/: user_service.py
